@@ -11,11 +11,15 @@ Needed For Stable Release
   as soon as the modem is available.  How can I do this when there are
   multiple modems available?  Weird multi semaphore notifications queues
   based on modems?  Gah.  Strange.
-- email paging failures to page-daemon (Errors-To: ?)
+- copy email paging failures to "page-daemon"
 - implement net/mask checking for SNPP client connections
 - create snpp.conf file for snpp tool to pull its defaults from
-- implement more of the API calls with hash opts
 - implement character-based translation tables
+- write up an example CGI script for sending pages
+- implement "maxblocks" (max-blocks-per-session for a PC)
+- implement "dialretries" (attempt dialing again for PC)
+- implement "fieldsplits" (fields cannot be split across blocks for PC)
+- implement "maxpages" (max pages per connection for a PC)
 *Docs
 - how to install, set up, test, and run sendpage
 - how to make a "sendpage" user & find the groups you need
@@ -27,16 +31,14 @@ Needed For Stable Release
 Would Be Nice
 -------------
 *Code
-- implement max-blocks-per-session for a PC
-- implement email notification fall-back
+- implement email notification fall-back for recips
 - have all the conf files get handled by Makefile.PL  --  /etc dir?
-- fix all support modules to use a hash list of parameters instead of
-  taking a KeesConf object.  This makes things more truly modular.
-- write up an example CGI script for sending pages
+- change PagingCentral module to deal with modems differently so we don't
+  have to use a KeesConf object.
 - figure out how to do filelocking under Windows
 - figure out what to replace my Syslog calls with under Windows
-- add "include" verb to sendpage.cf for sucking in other files?
-- spit out short GPL note somewhere?
+- add "include" verb to sendpage.cf for sucking in other files?  This allows
+  for separate files for PCs and recip lists.
 *Docs
 - update API doc to reflect changes made for PageQueue, Page, and Recipient
 - more general in-code commenting & documentation
@@ -47,7 +49,7 @@ Would Be Nice
 
 Stuff I Thought Of, But Will Most Likely Never Need
 ---------------------------------------------------
-- implement multiple TAP protocols? (are there differences?  PG1, PG3, etc)
+- implement multiple TAP protocols? (are there real differences?  PG1, PG3, etc)
   I don't think I'll ever need this due to the "pc:fields", and "pc:proto"
   variables.
 
