@@ -1307,6 +1307,7 @@ $config->define("modem:dialretries",{ DEFAULT => 3 });
 $config->define("pc:enabled",{ ARGCOUNT => 0, DEFAULT => 1 });
 $config->define("pc:debug",  { ARGCOUNT => 0, 
 					DEFAULT => $opts{d} ? 1 : 0 });
+$config->define("pc:page-daemon", { UNSET => 1 };
 $config->define("pc:modems", { ARGCOUNT => 2 });
 $config->define("pc:baud",   { DEFAULT => 9600 });
 $config->define("pc:data",   { DEFAULT => 7 });
