@@ -8,6 +8,7 @@ $Id$
 	- changed the email-sending error messages
 	- fixed bug with empty "from" getting filled to "nobody" on splits
 	- improved sendpage.init to be a little more flexible
+	- added "Errors-To" field for outbound email
 
 0.9.8: (30Jan2001)
 	- further updates to Device::SerialPort and associated documentation
